--- a/web/index.html
+++ b/web/index.html
@@ -9185,124 +9185,56 @@ var _user$project$Main$viewMessage = function (msg) {
 			_1: {ctor: '[]'}
 		});
 };
-var _user$project$Main$voteType = function (vt) {
-	var _p0 = vt;
-	if (_p0.ctor === 'Show') {
-		return 'Show';
-	} else {
-		return 'Film';
-	}
-};
 var _user$project$Main$encodeOutMsg = function (msg) {
 	return A2(
 		_elm_lang$core$Json_Encode$encode,
 		0,
 		function () {
-			var _p1 = msg;
-			switch (_p1.ctor) {
-				case 'Connecting':
-					return _elm_lang$core$Json_Encode$object(
-						{
+			var _p0 = msg;
+			if (_p0.ctor === 'Connecting') {
+				return _elm_lang$core$Json_Encode$object(
+					{
+						ctor: '::',
+						_0: {
+							ctor: '_Tuple2',
+							_0: 'type',
+							_1: _elm_lang$core$Json_Encode$string('connecting')
+						},
+						_1: {ctor: '[]'}
+					});
+			} else {
+				return _elm_lang$core$Json_Encode$object(
+					{
+						ctor: '::',
+						_0: {
+							ctor: '_Tuple2',
+							_0: 'type',
+							_1: _elm_lang$core$Json_Encode$string('vote')
+						},
+						_1: {
 							ctor: '::',
 							_0: {
 								ctor: '_Tuple2',
-								_0: 'type',
-								_1: _elm_lang$core$Json_Encode$string('connecting')
+								_0: 'index',
+								_1: _elm_lang$core$Json_Encode$int(_p0._0)
 							},
 							_1: {ctor: '[]'}
-						});
-				case 'Vote':
-					return _elm_lang$core$Json_Encode$object(
-						{
-							ctor: '::',
-							_0: {
-								ctor: '_Tuple2',
-								_0: 'type',
-								_1: _elm_lang$core$Json_Encode$string('vote')
-							},
-							_1: {
-								ctor: '::',
-								_0: {
-									ctor: '_Tuple2',
-									_0: 'index',
-									_1: _elm_lang$core$Json_Encode$int(_p1._0)
-								},
-								_1: {ctor: '[]'}
-							}
-						});
-				case 'NextVote':
-					return _elm_lang$core$Json_Encode$object(
-						{
-							ctor: '::',
-							_0: {
-								ctor: '_Tuple2',
-								_0: 'type',
-								_1: _elm_lang$core$Json_Encode$string(
-									A2(
-										_elm_lang$core$Basics_ops['++'],
-										'do',
-										A2(
-											_elm_lang$core$Basics_ops['++'],
-											_user$project$Main$voteType(_p1._0),
-											'Vote')))
-							},
-							_1: {
-								ctor: '::',
-								_0: {
-									ctor: '_Tuple2',
-									_0: 'votes',
-									_1: _elm_lang$core$Json_Encode$list(
-										A2(_elm_lang$core$List$map, _elm_lang$core$Json_Encode$int, _p1._1))
-								},
-								_1: {ctor: '[]'}
-							}
-						});
-				case 'Reset':
-					return _elm_lang$core$Json_Encode$object(
-						{
-							ctor: '::',
-							_0: {
-								ctor: '_Tuple2',
-								_0: 'type',
-								_1: _elm_lang$core$Json_Encode$string('reset')
-							},
-							_1: {ctor: '[]'}
-						});
-				case 'KitchenScene':
-					return _elm_lang$core$Json_Encode$object(
-						{
-							ctor: '::',
-							_0: {
-								ctor: '_Tuple2',
-								_0: 'type',
-								_1: _elm_lang$core$Json_Encode$string('kitchenScene')
-							},
-							_1: {ctor: '[]'}
-						});
-				default:
-					return _elm_lang$core$Json_Encode$object(
-						{
-							ctor: '::',
-							_0: {
-								ctor: '_Tuple2',
-								_0: 'type',
-								_1: _elm_lang$core$Json_Encode$string('underride')
-							},
-							_1: {ctor: '[]'}
-						});
+						}
+					});
 			}
 		}());
+};
+var _user$project$Main$voteType = function (vt) {
+	var _p1 = vt;
+	if (_p1.ctor === 'Show') {
+		return 'Show';
+	} else {
+		return 'Film';
+	}
 };
 var _user$project$Main$Model = F2(
 	function (a, b) {
 		return {messages: a, votes: b};
-	});
-var _user$project$Main$Underride = {ctor: 'Underride'};
-var _user$project$Main$KitchenScene = {ctor: 'KitchenScene'};
-var _user$project$Main$Reset = {ctor: 'Reset'};
-var _user$project$Main$NextVote = F2(
-	function (a, b) {
-		return {ctor: 'NextVote', _0: a, _1: b};
 	});
 var _user$project$Main$Vote = function (a) {
 	return {ctor: 'Vote', _0: a};
@@ -9382,263 +9314,26 @@ var _user$project$Main$view = function (model) {
 		_elm_lang$html$Html$div,
 		{ctor: '[]'},
 		A2(
-			_elm_lang$core$Basics_ops['++'],
-			{
-				ctor: '::',
-				_0: A2(
-					_elm_lang$html$Html$div,
-					{ctor: '[]'},
-					A2(_elm_lang$core$List$map, _user$project$Main$viewMessage, model.messages)),
-				_1: {
-					ctor: '::',
-					_0: A2(
+			_elm_lang$core$List$indexedMap,
+			F2(
+				function (i, t) {
+					return A2(
 						_elm_lang$html$Html$button,
 						{
 							ctor: '::',
 							_0: _elm_lang$html$Html_Events$onClick(
 								_user$project$Main$Send(
-									_user$project$Main$encodeOutMsg(_user$project$Main$Reset))),
+									_user$project$Main$encodeOutMsg(
+										_user$project$Main$Vote(i)))),
 							_1: {ctor: '[]'}
 						},
 						{
 							ctor: '::',
-							_0: _elm_lang$html$Html$text('Reset'),
+							_0: _elm_lang$html$Html$text(t),
 							_1: {ctor: '[]'}
-						}),
-					_1: {
-						ctor: '::',
-						_0: A2(
-							_elm_lang$html$Html$button,
-							{
-								ctor: '::',
-								_0: _elm_lang$html$Html_Events$onClick(
-									_user$project$Main$Send(
-										_user$project$Main$encodeOutMsg(_user$project$Main$KitchenScene))),
-								_1: {ctor: '[]'}
-							},
-							{
-								ctor: '::',
-								_0: _elm_lang$html$Html$text('Kitchen Scene'),
-								_1: {ctor: '[]'}
-							}),
-						_1: {
-							ctor: '::',
-							_0: A2(
-								_elm_lang$html$Html$button,
-								{
-									ctor: '::',
-									_0: _elm_lang$html$Html_Events$onClick(
-										_user$project$Main$Send(
-											_user$project$Main$encodeOutMsg(_user$project$Main$Underride))),
-									_1: {ctor: '[]'}
-								},
-								{
-									ctor: '::',
-									_0: _elm_lang$html$Html$text('Underride'),
-									_1: {ctor: '[]'}
-								}),
-							_1: {
-								ctor: '::',
-								_0: A2(
-									_elm_lang$html$Html$button,
-									{
-										ctor: '::',
-										_0: _elm_lang$html$Html_Events$onClick(
-											_user$project$Main$Send(
-												_user$project$Main$encodeOutMsg(
-													A2(
-														_user$project$Main$NextVote,
-														_user$project$Main$Show,
-														{
-															ctor: '::',
-															_0: 0,
-															_1: {
-																ctor: '::',
-																_0: 1,
-																_1: {
-																	ctor: '::',
-																	_0: 2,
-																	_1: {ctor: '[]'}
-																}
-															}
-														})))),
-										_1: {ctor: '[]'}
-									},
-									{
-										ctor: '::',
-										_0: _elm_lang$html$Html$text('Show Vote 1'),
-										_1: {ctor: '[]'}
-									}),
-								_1: {
-									ctor: '::',
-									_0: A2(
-										_elm_lang$html$Html$button,
-										{
-											ctor: '::',
-											_0: _elm_lang$html$Html_Events$onClick(
-												_user$project$Main$Send(
-													_user$project$Main$encodeOutMsg(
-														A2(
-															_user$project$Main$NextVote,
-															_user$project$Main$Film,
-															{
-																ctor: '::',
-																_0: 0,
-																_1: {
-																	ctor: '::',
-																	_0: 0,
-																	_1: {
-																		ctor: '::',
-																		_0: 0,
-																		_1: {
-																			ctor: '::',
-																			_0: 0,
-																			_1: {
-																				ctor: '::',
-																				_0: 0,
-																				_1: {
-																					ctor: '::',
-																					_0: 0,
-																					_1: {
-																						ctor: '::',
-																						_0: 0,
-																						_1: {
-																							ctor: '::',
-																							_0: 1,
-																							_1: {
-																								ctor: '::',
-																								_0: 2,
-																								_1: {
-																									ctor: '::',
-																									_0: 3,
-																									_1: {
-																										ctor: '::',
-																										_0: 4,
-																										_1: {ctor: '[]'}
-																									}
-																								}
-																							}
-																						}
-																					}
-																				}
-																			}
-																		}
-																	}
-																}
-															})))),
-											_1: {ctor: '[]'}
-										},
-										{
-											ctor: '::',
-											_0: _elm_lang$html$Html$text('Film Vote 1'),
-											_1: {ctor: '[]'}
-										}),
-									_1: {
-										ctor: '::',
-										_0: A2(
-											_elm_lang$html$Html$button,
-											{
-												ctor: '::',
-												_0: _elm_lang$html$Html_Events$onClick(
-													_user$project$Main$Send(
-														_user$project$Main$encodeOutMsg(
-															A2(
-																_user$project$Main$NextVote,
-																_user$project$Main$Show,
-																{
-																	ctor: '::',
-																	_0: 2,
-																	_1: {
-																		ctor: '::',
-																		_0: 1,
-																		_1: {
-																			ctor: '::',
-																			_0: 0,
-																			_1: {ctor: '[]'}
-																		}
-																	}
-																})))),
-												_1: {ctor: '[]'}
-											},
-											{
-												ctor: '::',
-												_0: _elm_lang$html$Html$text('Show Vote 2'),
-												_1: {ctor: '[]'}
-											}),
-										_1: {
-											ctor: '::',
-											_0: A2(
-												_elm_lang$html$Html$button,
-												{
-													ctor: '::',
-													_0: _elm_lang$html$Html_Events$onClick(
-														_user$project$Main$Send(
-															_user$project$Main$encodeOutMsg(
-																A2(
-																	_user$project$Main$NextVote,
-																	_user$project$Main$Film,
-																	{
-																		ctor: '::',
-																		_0: 0,
-																		_1: {
-																			ctor: '::',
-																			_0: 1,
-																			_1: {
-																				ctor: '::',
-																				_0: 2,
-																				_1: {
-																					ctor: '::',
-																					_0: 3,
-																					_1: {
-																						ctor: '::',
-																						_0: 4,
-																						_1: {
-																							ctor: '::',
-																							_0: 5,
-																							_1: {ctor: '[]'}
-																						}
-																					}
-																				}
-																			}
-																		}
-																	})))),
-													_1: {ctor: '[]'}
-												},
-												{
-													ctor: '::',
-													_0: _elm_lang$html$Html$text('Film Vote 2'),
-													_1: {ctor: '[]'}
-												}),
-											_1: {ctor: '[]'}
-										}
-									}
-								}
-							}
-						}
-					}
-				}
-			},
-			A2(
-				_elm_lang$core$List$indexedMap,
-				F2(
-					function (i, t) {
-						return A2(
-							_elm_lang$html$Html$button,
-							{
-								ctor: '::',
-								_0: _elm_lang$html$Html_Events$onClick(
-									_user$project$Main$Send(
-										_user$project$Main$encodeOutMsg(
-											_user$project$Main$Vote(i)))),
-								_1: {ctor: '[]'}
-							},
-							{
-								ctor: '::',
-								_0: _elm_lang$html$Html$text(t),
-								_1: {ctor: '[]'}
-							});
-					}),
-				model.votes)));
+						});
+				}),
+			model.votes));
 };
 var _user$project$Main$main = _elm_lang$html$Html$program(
 	{init: _user$project$Main$init, view: _user$project$Main$view, update: _user$project$Main$update, subscriptions: _user$project$Main$subscriptions})();
