--- a/web/index.html
+++ b/web/index.html
@@ -9200,7 +9200,15 @@ var _user$project$Main$encodeOutMsg = function (msg) {
 							_0: 'type',
 							_1: _elm_lang$core$Json_Encode$string('connecting')
 						},
-						_1: {ctor: '[]'}
+						_1: {
+							ctor: '::',
+							_0: {
+								ctor: '_Tuple2',
+								_0: 'password',
+								_1: _elm_lang$core$Json_Encode$string(_p0._0)
+							},
+							_1: {ctor: '[]'}
+						}
 					});
 			} else {
 				return _elm_lang$core$Json_Encode$object(
@@ -9232,18 +9240,37 @@ var _user$project$Main$voteType = function (vt) {
 		return 'Film';
 	}
 };
-var _user$project$Main$Model = F2(
-	function (a, b) {
-		return {messages: a, votes: b};
+var _user$project$Main$Model = F4(
+	function (a, b, c, d) {
+		return {messages: a, votes: b, password: c, connected: d};
 	});
+var _user$project$Main$init = {
+	ctor: '_Tuple2',
+	_0: A4(
+		_user$project$Main$Model,
+		{ctor: '[]'},
+		{ctor: '[]'},
+		'',
+		false),
+	_1: _elm_lang$core$Platform_Cmd$none
+};
 var _user$project$Main$Vote = function (a) {
 	return {ctor: 'Vote', _0: a};
 };
-var _user$project$Main$Connecting = {ctor: 'Connecting'};
+var _user$project$Main$Connecting = function (a) {
+	return {ctor: 'Connecting', _0: a};
+};
+var _user$project$Main$PasswordResult = function (a) {
+	return {ctor: 'PasswordResult', _0: a};
+};
 var _user$project$Main$Votes = function (a) {
 	return {ctor: 'Votes', _0: a};
 };
 var _user$project$Main$decodeInMsg = function (msg) {
+	var decodePassResult = A2(
+		_elm_lang$core$Json_Decode$map,
+		_user$project$Main$PasswordResult,
+		A2(_elm_lang$core$Json_Decode$field, 'success', _elm_lang$core$Json_Decode$bool));
 	var decodeVotes = A2(
 		_elm_lang$core$Json_Decode$map,
 		_user$project$Main$Votes,
@@ -9251,43 +9278,91 @@ var _user$project$Main$decodeInMsg = function (msg) {
 			_elm_lang$core$Json_Decode$field,
 			'votes',
 			_elm_lang$core$Json_Decode$list(_elm_lang$core$Json_Decode$string)));
-	return A3(_elm_lang$core$Basics$flip, _elm_lang$core$Json_Decode$decodeString, msg, decodeVotes);
+	var decodeAll = function (ty) {
+		var _p2 = ty;
+		switch (_p2) {
+			case 'vote':
+				return decodeVotes;
+			case 'password':
+				return decodePassResult;
+			default:
+				return _elm_lang$core$Json_Decode$fail('Message type wrong');
+		}
+	};
+	return A3(
+		_elm_lang$core$Basics$flip,
+		_elm_lang$core$Json_Decode$decodeString,
+		msg,
+		A2(
+			_elm_lang$core$Json_Decode$andThen,
+			decodeAll,
+			A2(_elm_lang$core$Json_Decode$field, 'type', _elm_lang$core$Json_Decode$string)));
 };
 var _user$project$Main$update = F2(
 	function (msg, model) {
-		var _p2 = msg;
-		if (_p2.ctor === 'Send') {
-			return {
-				ctor: '_Tuple2',
-				_0: model,
-				_1: A2(_elm_lang$websocket$WebSocket$send, 'ws://localhost:9160', _p2._0)
-			};
-		} else {
-			var _p4 = _p2._0;
-			var _p3 = _user$project$Main$decodeInMsg(_p4);
-			if (_p3.ctor === 'Ok') {
+		var _p3 = msg;
+		switch (_p3.ctor) {
+			case 'Send':
 				return {
 					ctor: '_Tuple2',
-					_0: _elm_lang$core$Native_Utils.update(
-						model,
-						{votes: _p3._0._0}),
-					_1: _elm_lang$core$Platform_Cmd$none
+					_0: model,
+					_1: A2(_elm_lang$websocket$WebSocket$send, 'ws://localhost:9160', _p3._0)
 				};
-			} else {
+			case 'NewMessage':
+				var _p5 = _p3._0;
+				var _p4 = _user$project$Main$decodeInMsg(_p5);
+				_v4_2:
+				do {
+					if (_p4.ctor === 'Ok') {
+						if (_p4._0.ctor === 'Votes') {
+							return {
+								ctor: '_Tuple2',
+								_0: _elm_lang$core$Native_Utils.update(
+									model,
+									{votes: _p4._0._0}),
+								_1: _elm_lang$core$Platform_Cmd$none
+							};
+						} else {
+							if (_p4._0._0 === true) {
+								return {
+									ctor: '_Tuple2',
+									_0: _elm_lang$core$Native_Utils.update(
+										model,
+										{connected: true}),
+									_1: _elm_lang$core$Platform_Cmd$none
+								};
+							} else {
+								break _v4_2;
+							}
+						}
+					} else {
+						break _v4_2;
+					}
+				} while(false);
 				return {
 					ctor: '_Tuple2',
 					_0: _elm_lang$core$Native_Utils.update(
 						model,
 						{
-							messages: {ctor: '::', _0: _p4, _1: model.messages}
+							messages: {ctor: '::', _0: _p5, _1: model.messages}
 						}),
 					_1: _elm_lang$core$Platform_Cmd$none
 				};
-			}
+			default:
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{password: _p3._0}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
 		}
 	});
 var _user$project$Main$Film = {ctor: 'Film'};
 var _user$project$Main$Show = {ctor: 'Show'};
+var _user$project$Main$Password = function (a) {
+	return {ctor: 'Password', _0: a};
+};
 var _user$project$Main$NewMessage = function (a) {
 	return {ctor: 'NewMessage', _0: a};
 };
@@ -9297,43 +9372,67 @@ var _user$project$Main$subscriptions = function (model) {
 var _user$project$Main$Send = function (a) {
 	return {ctor: 'Send', _0: a};
 };
-var _user$project$Main$init = {
-	ctor: '_Tuple2',
-	_0: A2(
-		_user$project$Main$Model,
-		{ctor: '[]'},
-		{ctor: '[]'}),
-	_1: A2(
-		_elm_lang$core$Task$perform,
-		_user$project$Main$Send,
-		_elm_lang$core$Task$succeed(
-			_user$project$Main$encodeOutMsg(_user$project$Main$Connecting)))
-};
 var _user$project$Main$view = function (model) {
 	return A2(
 		_elm_lang$html$Html$div,
 		{ctor: '[]'},
-		A2(
-			_elm_lang$core$List$indexedMap,
-			F2(
-				function (i, t) {
-					return A2(
-						_elm_lang$html$Html$button,
+		function () {
+			var _p6 = model.connected;
+			if (_p6 === true) {
+				return A2(
+					_elm_lang$core$List$indexedMap,
+					F2(
+						function (i, t) {
+							return A2(
+								_elm_lang$html$Html$button,
+								{
+									ctor: '::',
+									_0: _elm_lang$html$Html_Events$onClick(
+										_user$project$Main$Send(
+											_user$project$Main$encodeOutMsg(
+												_user$project$Main$Vote(i)))),
+									_1: {ctor: '[]'}
+								},
+								{
+									ctor: '::',
+									_0: _elm_lang$html$Html$text(t),
+									_1: {ctor: '[]'}
+								});
+						}),
+					model.votes);
+			} else {
+				return {
+					ctor: '::',
+					_0: A2(
+						_elm_lang$html$Html$input,
 						{
 							ctor: '::',
-							_0: _elm_lang$html$Html_Events$onClick(
-								_user$project$Main$Send(
-									_user$project$Main$encodeOutMsg(
-										_user$project$Main$Vote(i)))),
+							_0: _elm_lang$html$Html_Events$onInput(_user$project$Main$Password),
 							_1: {ctor: '[]'}
 						},
-						{
-							ctor: '::',
-							_0: _elm_lang$html$Html$text(t),
-							_1: {ctor: '[]'}
-						});
-				}),
-			model.votes));
+						{ctor: '[]'}),
+					_1: {
+						ctor: '::',
+						_0: A2(
+							_elm_lang$html$Html$button,
+							{
+								ctor: '::',
+								_0: _elm_lang$html$Html_Events$onClick(
+									_user$project$Main$Send(
+										_user$project$Main$encodeOutMsg(
+											_user$project$Main$Connecting(model.password)))),
+								_1: {ctor: '[]'}
+							},
+							{
+								ctor: '::',
+								_0: _elm_lang$html$Html$text('connect'),
+								_1: {ctor: '[]'}
+							}),
+						_1: {ctor: '[]'}
+					}
+				};
+			}
+		}());
 };
 var _user$project$Main$main = _elm_lang$html$Html$program(
 	{init: _user$project$Main$init, view: _user$project$Main$view, update: _user$project$Main$update, subscriptions: _user$project$Main$subscriptions})();
