--- a/web/reactor-admin.html
+++ b/web/reactor-admin.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.4/worker-lua.js"></script>
 
         <!-- Put the name of your app here (my sources place in `src` forder) -->
-        <script type="text/javascript" src="/_compile/src/Main.elm"></script>
+        <script type="text/javascript" src="/_compile/Admin.elm"></script>
 
         <!-- Removes splash and starts elm app. -->
         <script type="text/javascript">
