--- a/web/admin.html
+++ b/web/admin.html
@@ -10501,7 +10501,36 @@ var _user$project$Main$view = function (model) {
 																	_0: _elm_lang$html$Html$text('Alt cameras'),
 																	_1: {ctor: '[]'}
 																}),
-															_1: {ctor: '[]'}
+															_1: {
+																ctor: '::',
+																_0: A2(
+																	_elm_lang$html$Html$button,
+																	{
+																		ctor: '::',
+																		_0: _elm_lang$html$Html_Events$onClick(
+																			_user$project$Main$Send(
+																				_user$project$Main$encodeOutMsg(
+																					A2(
+																						_user$project$Main$NextVote,
+																						_user$project$Main$Film,
+																						{
+																							ctor: '::',
+																							_0: 17,
+																							_1: {
+																								ctor: '::',
+																								_0: 18,
+																								_1: {ctor: '[]'}
+																							}
+																						})))),
+																		_1: {ctor: '[]'}
+																	},
+																	{
+																		ctor: '::',
+																		_0: _elm_lang$html$Html$text('overlays'),
+																		_1: {ctor: '[]'}
+																	}),
+																_1: {ctor: '[]'}
+															}
 														}
 													}
 												}
